# indi_allinone

./: .gitignore  README.md
AstroController/: AstroController2_20231102_1.fzz  Filterwheel.fzz  Focuser.fzz  Heather-connection.fzz  Meteo.fzz  apply_patches.py  case.scad  platformio.ini
AstroController/include/: BinSerialProtocol.h  BinSerialWriteBuffer.h  Blinker.h  CommonUtils.h  DewHeater.h  EepromStored.h  IndiDevice.h  IndiDeviceMutator.h  IndiFloatVectorMember.h  IndiIntVectorMember.h  IndiNumberVector.h  IndiProtocol.h  IndiVectorMemberStorage.h  MeteoTemp.h  MeteoTempBME.h  MeteoTempDHT.h  Motor.h  PerfHistogram.h  Scheduled.h  ScheduledIndiProtocol.h  Scheduler.h  Status.h  Symbol.h  TaskQueue.h  TaskSequence.h  WriteBuffer.h  XmlWriteBuffer.h  custom_tusb_config_rp2040.h  pwmresistor.h  utime.h
AstroController/patches/: copy_to_ram.patch
AstroController/src/: BaseDriver.cpp  BinSerialWriteBuffer.cpp  Blinker.cpp  CommonUtils.cpp  DewHeater.cpp  EepromStored.cpp  EepromStored_Common.cpp  EepromStored_Flash.cpp  EepromVectorMemberStorage.cpp  FilterWheel.cpp  FlashStore.cpp  Focuser.cpp  IndiIntVectorMember.cpp  IndiNumberVector.cpp  IndiNumberVectorMember.cpp  IndiProtocol.cpp  IndiSwitchVector.cpp  (+18 more)
indi_driver/: .gitignore  CMakeLists.txt  Lock.cpp  Lock.h  allinone.cpp  indi_allinone.xml  simpledevice.h
ucontroler/: .cproject  .gitignore  .project  BaseDriver.cpp  BaseDriver.h  BinSerialProtocol.h  BinSerialReadBuffer.cpp  BinSerialReadBuffer.h  BinSerialWriteBuffer.cpp  BinSerialWriteBuffer.h  CommonUtils.cpp  CommonUtils.h  Config.cpp  Config.h  DewHeater.cpp  DewHeater.h  EepromStored.cpp  EepromStored.h  EepromVectorMemberStorage.cpp  FilterWheel.cpp  FilterWheel.h  FilterWheelMotor.cpp  FilterWheelMotor.h  Focuser.cpp  Focuser.h  IndiDevice.cpp  IndiDevice.h  IndiDeviceMutator.h  IndiFloatVectorMember.cpp  IndiFloatVectorMember.h  IndiIntVectorMember.cpp  IndiIntVectorMember.h  IndiNumberVector.cpp  IndiNumberVector.h  IndiNumberVectorMember.cpp  IndiNumberVectorMember.h  IndiProtocol.cpp  IndiProtocol.h  IndiSwitchVector.cpp  IndiSwitchVector.h  (+50 more)
(+13 files in other folders)
